# ft_slm

./: .dockerignore  .gitignore  README.md  config.yaml  dockerfile  pyproject.toml  report.tex
notebooks/: explore_data.ipynb  results.ipynb
scripts/: eval_benchmarks.py  fetch_data.py  train_ewc.py  train_lora_replay.py  train_naive.py  train_olora.py  utils.py
