[project]
name = "ft-slm"
version = "0.1.0"
description = "Continual fine-tuning of small LLMs on sequential ArXiv batches with anti-forgetting strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=2.19.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "peft>=0.19.1",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "tqdm>=4.66.5",
    "transformers>=5.8.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
